Fix 1st iteration of wrap for mobiles
Add wrap for 'body'

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ body{
     justify-content: space-between;
     min-height: 100vh;
     font-family: 'Kanit', sans-serif;
+    flex-wrap: wrap;
 }
 
 .block{
